--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PushExample</string>
     <string name="title_activity_screens">ScreensActivity</string>
+    <string name="push_message">Push Message</string>
+    <string name="send_push_notification">Send Push Notification</string>
 </resources>
